tests/NormalTests/paczka1/fuzzy1/11760261.err
Error in line 12: UqHxc S106 120,6
Error in line 17: TmLVx A353 50,9
Error in line 14: Ya747PIFUXG S106 66,3
